[aliases]
test=pytest

[metadata]
name = deployment-director
version = 0.2.0
author = Ushahidi Team
author_email=team@ushahidi.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ushahidi/deployment-director
license = MIT
license_file = LICENSE.txt
keywords = deployment,automation

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
setup_requires = pytest-runner
tests_require = pytest>6,<7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    deployment-director=DeploymentDirector.cli:main
