[aliases]
test=pytest

[metadata]
name = deployment-director
version = 0.2.1
author = Ushahidi Team
author_email=team@ushahidi.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ushahidi/deployment-director
license = MIT
license_file = LICENSE.txt
keywords = deployment,automation

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    click>6
    voluptuous>0.10
    executor>=18
    frozendict>=1.2
    colorama == 0.3.9
    PyYAML>3
    six>1,<2
setup_requires = pytest-runner
tests_require = pytest>6,<7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    deployment-director=DeploymentDirector.cli:main
